[package]
name = "envoy-ext-proc-stubs"
version = "0.1.0"
edition = "2021"
description = "Pre-compiled gRPC client and server stubs for the Envoy ext_proc protocol"
license = "MIT"

[dependencies]
prost = "0.11"
prost-types = "0.11"
tonic = "0.8"

[build-dependencies]
tonic-build = "0.8"

[lib]
name = "envoy_ext_proc_stubs"
doctest = false
