[package]
name = "envoy-ext-proc-stubs"
version = "0.2.0"
edition = "2021"
description = "Pre-compiled gRPC client and server stubs for the Envoy ext_proc protocol"
license = "MIT"

[dependencies]
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"

[build-dependencies]
prost-build = "0.13"
tonic-build = "0.12"

[lib]
name = "envoy_ext_proc_stubs"
doctest = false
